--- a/style.css
+++ b/style.css
@@ -15,7 +15,8 @@ body{
   top:0;
   height:18.750em/*300px*/;
   background-image: url(assets/img/header3.jpg);
-  background-size: cover;}
+  background-size: auto;
+}
 
 #rwf{position:relative;
   top: 1.5em;
@@ -69,6 +70,7 @@ nav{position:relative;
   position:relative;
   height:19.310em/*309px*/;}
 
+ @media all and (min-width:1919px) {
 #icone1 {position: relative;
 left: -2.3em/*40px*/;
 top: -1.9em/*25px*/}
@@ -108,8 +110,13 @@ top: -0.600em/*40px*/}
 #icone1, #icone2, #icone3, #icone4, #icone5, #icone6, #icone7, #icone8, #icone9 {-webkit-animation: monanim1 0.5s infinite linear alternate;}
 @-webkit-keyframes monanim1 {from {transform: scale(1);}
 to {transform: scale(1.1);}}
+}
 
-
+ @media all and (max-width:1919px) {
+   #icone1, #icone2, #icone3, #icone4, #icone5, #icone6, #icone7, #icone8, #icone9{
+     display: none;
+   }
+ }
 
 /*------------------------------------- Présentation---------------------------------------- */
 #presentation1{position: relative;
@@ -258,7 +265,7 @@ to {transform: scale(1.1);}}
       }
 
       /* -------------------------------------Styles pour les écrans smartphone -------------------------------------*/
-      @media all and (max-width: 960px) {
+      @media all and (max-width: 796px) {
           #bandeau {
               display:none;
           }
