--- a/style.css
+++ b/style.css
@@ -189,11 +189,12 @@ to {transform: scale(1.1);}}
   footer{position: relative;
   left:0;
   top:0em;
-  margin-top: -5em;
+
   background-color:  gray;}
 
   footer p{position: relative;
-  top: -2em;}
+    font-family: 'Josefin Sans', sans-serif;
+  }
 
       /* -------------------------------------Styles pour les écrans tablette------------------------------------- */
      @media all and (max-width:1200px) {
