--- a/style.css
+++ b/style.css
@@ -1,307 +1,10 @@
-
-/* -------------------------------------Styles de base------------------------------------- */
-
-body{
+html, body{
   width: 100%;
   height: auto;
-  background-color: blue;
+  margin: 0;
+  padding: 0;
 }
 
-.row{border-radius: 0 !important;}
-
-/*------------------------------------- En-tete logo -------------------------------------*/
-
-#header{position:relative;
-  top:0;
-  height:18.750em/*300px*/;
-  background-image: url(assets/img/header3.jpg);
-  background-size: auto;
+#accescours{
+  height: 25%;
 }
-
-#rwf{position:relative;
-  top: 1.5em;
-  left: 1.5em;
-  opacity: 1;
-  height: 14.375em/*230px*/;
-  border-radius: 0.625em/*10px*/;}
-
-#reseauxsociaux1 {position: fixed;
-  top: 0;
-  left: 97.5%;
-  width: 3.125em/*50px*/;
-  height: auto;
-  border-radius: 0.625em/*10px*/;
-  z-index: 1;}
-
-#reseauxsociaux2 {position: fixed;
-  top: 4.5%;
-  left: 97.5%;
-  width: 3.125em/*50px*/;
-  height: auto;
-  border-radius: 0.625em/*10px*/;
-  z-index: 1;}
-
-
-/*-------------------------- Menu déroulant----------------------------- */
-nav{position:relative;
-  left:0;
-  padding:0;
-  border-radius: 0 !important;}
-
-.navbar{
-  margin-bottom: 0 !important;
-}
-
-
-/*------------------------------------- Carousel------------------------------------- */
-#myCarousel{position:relative;
-
-  background-color: rgb(71,86,125);}
-
-
-
-
-/* --------------------------------------Bandeau ------------------------------------*/
-.jumbotron{
-  margin-bottom: 0em !important;
-}
-
-#bandeau {background-image: url(assets/img/bandeauV4.PNG);
-  position:relative;
-  height:19.310em/*309px*/;}
-
- @media all and (min-width:1919px) {
-#icone1 {position: relative;
-left: -2.3em/*40px*/;
-top: -1.9em/*25px*/}
-
-#icone2 {position: relative;
-  left: 3.900em/*242px*/;
-  top: 5.613em/*125px*/;}
-
-#icone3 {position: relative;
-left: 10.100em/*442px*/;
-top: -0.600em/*40px*/}
-
-#icone4 {position: relative;
-  left: 18.300em/*672px*/;
-  top: 4.900em/*117px*/;}
-
-#icone5 {position: relative;
-  left: 24.500em/*872px*/;
-  top: -2.300em/*14px*/;}
-
-#icone6 {position: relative;
-  left: 31.625em/*1082px*/;
-  top: 4.913em/*117px*/;}
-
-#icone7 {position: relative;
-  left: 39.625em/*1306px*/;
-  top: -2.038em/*23px*/;}
-
-#icone8 {position: relative;
-  left: 45.563em/*1505px*/;
-  top: 5.225em/*122px*/;}
-
-#icone9 {position: relative;
-  left: 51.988em/*1707px*/;
-  top: -1.038em/*39px*/;}
-
-#icone1, #icone2, #icone3, #icone4, #icone5, #icone6, #icone7, #icone8, #icone9 {-webkit-animation: monanim1 0.5s infinite linear alternate;}
-@-webkit-keyframes monanim1 {from {transform: scale(1);}
-to {transform: scale(1.1);}}
-}
-
- @media all and (max-width:1919px) {
-   #icone1, #icone2, #icone3, #icone4, #icone5, #icone6, #icone7, #icone8, #icone9{
-     display: none;
-   }
- }
-
-/*------------------------------------- Présentation---------------------------------------- */
-#presentation1{position: relative;
-  top:-2.2em;
-  text-align: center;
-  background-color: #404d56;
-  color:white;}
-
-#presentation2{position: relative;
-  top:-4.4em;
-  text-align: center;
-  background-color:#404d56;
-  color:white; }
-
-#presentation1 img, #presentation2 img {position: relative;
-  top:9em;
-  left:5em;}
-
-
-
-/* -------------------------------------Logo E-learning -------------------------------------*/
-#accescours{position: relative;
-  left:0;
-  top:-7em;
-  height: 40em;
-  background-color: #c4c4c4;}
-
-#html{position: relative;
-  left:3%;
-  top:5em;}
-
-#css{position: relative;
-  left:9%;
-  top:5em;
-  width: 15em;}
-
-#javascript{position: relative;
-  left:14%;
-  top:5em;
-  width: 23em;}
-
-#php{position: relative;
-  left:18%;
-  top:5em;
-  width:25em;}
-
-#python{position: relative;
-  left:21%;
-  top:5em;
-  width:25em;}
-
-#accescours a img:hover {-webkit-animation: monanimlogo 0.5s ease-in alternate forwards;}
-
-@-webkit-keyframes monanimlogo {
-  from {transform: scale(1);}
-  to {transform: scale(1.2);}}
-
-
-  /*------------------------------------- Partenaire------------------------------------- */
-  #partenaire{position: relative;
-  left:0;
-  top:-7em;
-  background-color: white;}
-
-  #partenaire img{
-  width:18em;
-  margin-left: 20.500em;}
-
-  /* Footer */
-  footer{position: relative;
-  left:0;
-  top:0em;
-  margin-top: -5em;
-  background-color:  gray;}
-
-  footer p{position: relative;
-  top: -2em;}
-
-      /* -------------------------------------Styles pour les écrans tablette------------------------------------- */
-     @media all and (max-width:1200px) {
-         /* En-tête */
-         #reseauxsociaux1{
-             position: absolute;
-             top:20%;
-             left:90%;
-         }
-         #reseauxsociaux2{
-             position: absolute;
-             top:50%;
-             left:90%;
-         }
-         /* -------------------------------------Bandeau------------------------------------- */
-         #bandeau {
-              display:none;
-         }
-         /*------------------------------------- Présentation------------------------------------- */
-         #presentation1 img{position: relative;
-             top:15em;
-             margin-left: -2em;
-         }
-         #img2{
-             display: none;
-         }
-         #img3{
-             display: none;
-         }
-         #img4{
-
-         }
-         #pres1 h1, #pres2 h1{
-             text-align:center;
-         }
-         #pres1{
-             text-align: justify;
-             margin-left: 10em;
-         }
-         #pres2{
-             text-align: justify;
-             margin-left: -11em;
-         }
-         /*------------------------------------- Logos E-learning -------------------------------------*/
-         #accescours{
-             height:30em;
-         }
-         #accescours img{
-             margin-left: 4%;
-         }
-         #javascript, #php, #python{
-             width:10em;
-         }
-         #css, #html{
-             width: 6.5em;
-         }
-         #accescours p{
-             text-align: center;
-             font-size: 2em;
-             margin-top: 2em;
-         }
-         /*------------------------------------- Partenaires -------------------------------------*/
-         #p1, #p2, #p3{
-             display: none;
-         }
-          #p4 img{
-              width:6em;
-              margin-left: 2.5em;}
-      }
-
-      /* -------------------------------------Styles pour les écrans smartphone -------------------------------------*/
-      @media all and (max-width: 796px) {
-          #bandeau {
-              display:none;
-          }
-          #img2{
-             display: none;
-          }
-          #img3{
-             display: none;
-          }
-          #presentation1, #presentation1 img, #presentation2 img {
-             top:0;
-             left:0;
-          }
-          #pres1, #pres2 {
-             margin-left: 0;
-          }
-          #reseauxsociaux1, #reseauxsociaux2 {
-            display: none;
-          }
-          #accescours, #partenaire {
-            height: auto;
-          }
-          #javascript {
-            left:18%;
-          }
-          #php {
-            left:-3%;
-          }
-          #python {
-            left:40%;
-            top:-2.5em;
-          }
-          footer p {
-            top:0;
-          }
-          h1, p {
-            text-align: center;
-          }
-        }
