modif contact.php

--- a/assets/css/pages_secondaires.css
+++ b/assets/css/pages_secondaires.css
@@ -1,5 +1,4 @@
-
-
+/* -----------------------------------------  ID DE BASE DES PAGES PARTENAIRES --------------------------- */
 #candidature{
   height: auto;
     position: relative;
