--- a/assets/css/pages_secondaires.css
+++ b/assets/css/pages_secondaires.css
@@ -1,4 +1,7 @@
-/* -----------------------------------------  ID DE BASE DES PAGES PARTENAIRES --------------------------- */
+/* -----------------------------------------  ID DE BASE DES PAGES SECONDAIRES --------------------------- */
+.img-responsive {
+  display: inline-block !important;
+}
 #candidature{
   height: auto;
   width:100%;
@@ -71,7 +74,7 @@
 .appr{
     border: 15px solid transparent;
     width: 15%; height: 10%;
-}
+} 
 
 .format{
     border: 15px solid transparent;
@@ -84,6 +87,8 @@
     text-align: center;
 }
 
+.format p{color:black !important;}
+
 .format p > img{
-    width: 30%; height: 20%;
+      width: 50%;
 }
