--- a/assets/css/pages_secondaires.css
+++ b/assets/css/pages_secondaires.css
@@ -8,7 +8,7 @@
   margin: 0;
   position: relative;
   top:0 !important;
-  font-family: 'Helvetica Neue', sans-serif;
+  font-family: 'Verdana', sans-serif;
   text-align: center;
 }
 
@@ -74,7 +74,7 @@
 .appr{
     border: 15px solid transparent;
     width: 15%; height: 10%;
-} 
+}
 
 .format{
     border: 15px solid transparent;
