--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@ html, body{
   height: 100%;
   margin: 0;
   padding: 0;
+  font-family: 'Verdana', sans-serif !important;
 }
 
 h1, h2, h3, h4, h5, h6, p {
@@ -227,7 +228,7 @@ p {
     background-color: black;
 
   }
-  
+
   .bandeau{
     display: none;
   }
