--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ html, body{
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: 'Verdana', sans-serif !important;
+  font-family: 'Roboto', sans-serif !important;
 }
 
 h1, h2, h3, h4, h5, h6, p {
@@ -12,11 +12,14 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 p {
-  font-size: 21px;
+  font-size: 31px;
   width: 100%;
 
 }
 
+.bandeau{
+  background-color: red;
+}
 
 /* --------------------------------HEADER------------------------------- */
 #header{
@@ -141,11 +144,11 @@ p {
 
   text-align: center;
   width: 100%;
-  background-color: #404d56;
+  background-color: red;
 }
 
 .content{
-  color: white;
+  color: black;
   max-width: 60%;
   text-align: center;
   margin-left: 20%;
