--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,6 +120,17 @@ h1, h2, h3, h4, h5, h6, p {
   border-radius: 0 !important;
 }
 
+.navbar-header, .navbar-collapse{
+  background-color: #ececeb;
+
+}
+
+.navbar-inverse .navbar-nav > li > a {
+  background-color: #ececeb;
+  color: black !important;
+}
+
+
 
 /* --------------------------------BANDEAU------------------------------- */
 #img-bandeau{
@@ -133,7 +144,7 @@ h1, h2, h3, h4, h5, h6, p {
   text
   text-align: center;
   width: 100%;
-  background-color: #404d56;
+  background-color: #ececeb;
 }
 
 .content{
@@ -141,7 +152,7 @@ h1, h2, h3, h4, h5, h6, p {
   text-align: center;
   margin-left: 20%;
   padding: 5% 0% 5% 0%;
-  color: white;
+  color: black;
 }
 
 #article2{
