--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,7 +141,7 @@ p {
 
   text-align: center;
   width: 100%;
-  background-color: #404d56;
+  background-color: #ececeb;
 }
 
 .content{
@@ -150,11 +150,11 @@ p {
   text-align: center;
   margin-left: 20%;
   padding: 5% 0% 5% 0%;
-  color: white;
+  color: black;
 }
 
 #article2{
-  border-top: 8px dotted white;
+  border-top: 8px dotted black;
 }
 
 @media all and (min-width:405px) and (max-width:900px) {
@@ -164,7 +164,7 @@ p {
     text-align: left;
     margin-left: 5%;
     padding: 5% 0% 5% 0%;
-    color: white;
+    color: black;
   }
 }
 
@@ -175,7 +175,7 @@ p {
      text-align: left;
      margin-left: 5%;
      padding: 5% 0% 5% 0%;
-     color: white;
+     color: black;
    }
  }
 /* --------------------------------E-learning------------------------------- */
